# ChangeLog for sys-kernel/git-sources
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.221 2008/04/08 12:19:21 mpagano Exp $

*git-sources-2.6.25_rc8-r7 (08 Apr 2008)

  08 Apr 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25_rc8-r7.ebuild:
  Version bump

*git-sources-2.6.25_rc8-r6 (08 Apr 2008)

  08 Apr 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25_rc8-r6.ebuild:
  Version bump

*git-sources-2.6.25_rc8-r5 (07 Apr 2008)

  07 Apr 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25_rc8-r5.ebuild:
  Version bump

*git-sources-2.6.25_rc8-r4 (06 Apr 2008)

  06 Apr 2008; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25_rc8-r4.ebuild:
  Version bump

*git-sources-2.6.25_rc8-r3 (04 Apr 2008)

  04 Apr 2008; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25_rc8-r3.ebuild:
  Version bump

*git-sources-2.6.25_rc8-r2 (03 Apr 2008)

  03 Apr 2008; Mike Pagano <mpagano@gentoo.org>
  -git-sources-2.6.25_rc6-r1.ebuild, -git-sources-2.6.25_rc6-r2.ebuild,
  -git-sources-2.6.25_rc6-r3.ebuild, -git-sources-2.6.25_rc6-r4.ebuild,
  -git-sources-2.6.25_rc6-r5.ebuild, -git-sources-2.6.25_rc6-r6.ebuild,
  -git-sources-2.6.25_rc6-r7.ebuild, -git-sources-2.6.25_rc6-r8.ebuild,
  +git-sources-2.6.25_rc8-r2.ebuild:
  Version bump and old version cleanup

*git-sources-2.6.25_rc8-r1 (02 Apr 2008)

  02 Apr 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25_rc8-r1.ebuild:
  Version bump

*git-sources-2.6.25_rc7-r6 (31 Mar 2008)

  31 Mar 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25_rc7-r6.ebuild:
  Version bump

*git-sources-2.6.25_rc7-r5 (30 Mar 2008)

  30 Mar 2008; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25_rc7-r5.ebuild:
  Version bump

*git-sources-2.6.25_rc7-r4 (28 Mar 2008)

  28 Mar 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25_rc7-r4.ebuild:
  Version bump
