@@ -13,6 +13,8 @@ DIST patch-2.6.25-rc8-git4.bz2 78880 RMD160 0587173f5336d7eccc123e7c84ee1cf1fb5a
 DIST patch-2.6.25-rc8-git5.bz2 80747 RMD160 03dea479ff6054badb0bc43595e1955e048a757e SHA1 70c1ea213615ec9e4907dc97ee3b7865fcd5dcbf SHA256 04ba8ab2309c2044fe5a1245ffb7c5a1c04dce1c9fc757d1d23a79aa2d57aae3
 DIST patch-2.6.25-rc8-git6.bz2 86332 RMD160 c73130529a090c4b5b72c268d582fb5fa8fd1ee4 SHA1 ffa76b73fa54237de74a200156075f0e19d0fde7 SHA256 52eb744e4c6e001a88377ea869653bc2ba12d5c868b0e8efe5784acb36d236da
 DIST patch-2.6.25-rc8-git7.bz2 88778 RMD160 818e1db30ef90b03269e87d22ce77a6b0633942e SHA1 5127eb9762016ec782454c7ea516e1cf9f12760a SHA256 9ea604217de22bc8b73efb1ca3b720bcd17c068f4641c976513f8f4c8fb18aa0
+DIST patch-2.6.25-rc8-git8.bz2 93102 RMD160 020e81389feec33c9db468c1adcbb8343948469f SHA1 e87f57cd87970acd3f5cee5064a4a4c149c17039 SHA256 e22cc7f9d871b78102e94907945381a77489e0ac5fe3e4d6fc6b8199c792b9ae
+DIST patch-2.6.25-rc8-git9.bz2 106919 RMD160 1cc03eb96c026f5ce7a6a45566601597235b32cd SHA1 a1e3aabf848af8f8254774a653e7f5daa1ed1e1e SHA256 d48a3fc892dabca437381e2df6e32c611db5572a9ae18e0f46250360b7caaf6d
 DIST patch-2.6.25-rc8.bz2 9400470 RMD160 57a494fc72e874cf51bab83333f82c2b53ec36b4 SHA1 54a40e5f8007b4ceb6affacecdfe6ade92db196b SHA256 a759e07c652d3b074f3cb3eb9f16a782dd17a568d29d9528ef63689cace9ba71
 EBUILD git-sources-2.6.25_rc7-r1.ebuild 1234 RMD160 f14235bb085e6ea6e1331999d5ea8c02c2c7bf06 SHA1 42db37f238b38228de4ba4af9a4a0e76b4fd07a2 SHA256 b601c3c0b984e67a912c9a214cd79d5518da87d56c77fc009df59ff2a2f0aeb2
 EBUILD git-sources-2.6.25_rc7-r2.ebuild 1234 RMD160 b4cac1dec589294d2ebfdbaae6a8e1a86f784c4c SHA1 6865eab7dcd4de69e5271109cd976cd29293e9fb SHA256 306375455a621d5cd25e85b6732b1e6feb0bdd72e2d874573619fe4706d6d60e
@@ -27,5 +29,7 @@ EBUILD git-sources-2.6.25_rc8-r4.ebuild 1234 RMD160 7a51c7b629f846921482cf27a720
 EBUILD git-sources-2.6.25_rc8-r5.ebuild 1234 RMD160 f28b29cc526fecf0194c191643134ef6d57b32db SHA1 abb379776bb9103f8fdc3d894b2a2b2b175b7e0a SHA256 bebf50fa368c4d7489fba8d793c668fad00b9c9c1f16346f6269d5f9d3ae721d
 EBUILD git-sources-2.6.25_rc8-r6.ebuild 1234 RMD160 cf31b7b954fd67b46e5f93d2273f8e3aeeea382c SHA1 9df0ba8d8ba9ffb12a34a1198128e01e334ddc53 SHA256 acae5f17cdb8210d8b7be98c2c45d0614a84d951d8e9a8b75e338b9d6e35ff9b
 EBUILD git-sources-2.6.25_rc8-r7.ebuild 1234 RMD160 4b0df4272945aaa7b2a606435174266e5e3b8a22 SHA1 b2e2867a05069d3b330c11888e658542ea1813cb SHA256 eaac57b86b287ca5f00d8c105d0966acf066bcd9137d2fae3da667e5039d8491
-MISC ChangeLog 41827 RMD160 5268f838178dfa5453ac57a41f1fbb29becdfec4 SHA1 24e31ef415bf00962f22ff56025f3f31150ebdd5 SHA256 8f092b63ba3a1975d48483a924e42d7a25394c417acb25fd1924e822ef3910dd
+EBUILD git-sources-2.6.25_rc8-r8.ebuild 1234 RMD160 e219cca4a9754b60bb76c19652b76ffcb923189b SHA1 997c817350933ce3d5757a9e60ab44f84e406e88 SHA256 1ea533f58adb4ce4ac857a7568c8f1c3ae2838e4eefbad46fe156676c85048b5
+EBUILD git-sources-2.6.25_rc8-r9.ebuild 1234 RMD160 e969848ee92742b3c5aa7bf110d40e4aa300c9eb SHA1 42c4bf8710253a93780c8136300993bb7f6ac31b SHA256 7d94a0542d01aa0ffc31d4206c530074e7945d68b7bc827b6053abd8602a43d9
+MISC ChangeLog 42046 RMD160 fdb81b0a9a9054dba4ed6077d0e9a11fed9181fb SHA1 3432dbff7ca9c3f91e23f6f7d29467e7a5423fb5 SHA256 d25392ec374404c6396953f25450b44d36e34355d3a93c57ff409089f958399e
 MISC metadata.xml 443 RMD160 2b491a6310ff59f0658f64be1328b983ac82a462 SHA1 a65b3e97b9088758114ce0dbb46abb15879211e0 SHA256 9232689e2d3a60e31b4b0194770e6395613a110b77bef2f4e2f98d919acbaf13
