@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.221 2008/04/08 12:19:21 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.222 2008/04/11 09:58:30 mpagano Exp $
+
+*git-sources-2.6.25_rc8-r9 (11 Apr 2008)
+*git-sources-2.6.25_rc8-r8 (11 Apr 2008)
+
+  11 Apr 2008; Mike Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.25_rc8-r8.ebuild, +git-sources-2.6.25_rc8-r9.ebuild:
+  Version bump
 
 *git-sources-2.6.25_rc8-r7 (08 Apr 2008)
 
